# proteopt

./: README.md  api.py  application.py  config.py  proxy.py  requirements.txt  setup.cfg
docker/: Dockerfile  build.sh  push_to_dockerhub.sh  run.jupyter.sh  run.shell.sh  update.sh
docker/base/: Dockerfile  build.sh  push_to_dockerhub.sh
docker/base/container-files/: test_protein.fa
docker/container-files/: deploy_local_server.sh  jupyter_server_config.json
docker/full/: Dockerfile  build.sh  deploy_af2.local.sh
docker/weights/: download.sh
proteopt/: alignment.py  alphafold.py  client.py  common.py  mock_tool.py  omegafold.py  proteinmpnn.py  remote_model.py  rfdesign_hallucination.py  rfdesign_inpainting.py  rfdiffusion.py  rfdiffusion_motif.py  scaffold_problem.py
test/: test_alignment.py  test_alphafold.py  test_alphafold_remote.py  test_hallucination.py  test_inpainting.py  test_integration.py  test_mock_remote.py  test_omegafold.py  test_omegafold_remote.py  test_proteinmpnn.py  test_proteinmpnn_remote.py  test_proxy.py  test_rfdiffusion.py  test_rfdiffusion_motif.py  test_rfdiffusion_motif_remote.py  test_scaffold_problem.py  util.py
