[metadata]
name = proteopt
version = attr: proteopt.__version__
author = Tim O'Donnell
author_email = timodonnell@gmail.com
description = Protein optimization library and webapp
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openvax/proteopt
project_urls =
    Bug Tracker = https://github.com/openvax/proteopt/issues
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4
install_requires =
    pandas
    parasail
    six
    pytest
    prody
    numpy
    rmsd
    yabul
